# viabilidad_financiera

./: .gitignore  Dockerfile  README.md  dataset_evaluaciones.csv  dataset_viabilidad_binario.csv  pyproject.toml  render.yaml  start.bat
backend/: config.py  main.py  requirements.txt
backend/models_ml/: best_model.pkl  scaler.pkl
backend/routers/: unsupervised.py
backend/services/: additional_algorithms.py  data_processor.py  feedback_service.py  ml_engine.py  recommendation_engine.py  report_engine.py  scoring_engine.py  simulation_engine.py  training_pipeline.py  unsupervised_engine.py
database/: schema.sql
frontend/: index.html
frontend/styles/: main.css
tests/: test_data_processor.py  test_recommendation_engine.py  test_scoring_engine.py
